EasyParking/src/website/styles.css
:root {
    --bs-body-bg: #fff; /* Light mode background color */
    --bs-link-color: #002147;
    --bs-secondary-bg-rgb: 0, 33, 71;
    --bs-link-hover-color: #75B2DD;
}

[data-bs-theme="dark"] {
    --bs-body-bg: #002147; /* Dark mode background color */
    --bs-link-color: #fff;
    --bs-tertiary-bg-rgb: 0, 26, 55;
}

/* Apply the background color */
body {
    background-color: var(--bs-body-bg);
}

.input-group-text {
    background-color: var(--bs-body-bg) !important; /* Match the body's background color */
  }  

.main-hero.dark #hero-paragraph {
    color: #fff;
}

.form-check-input {
    margin-right: 10px;
}

.nav-pills{
    --bs-nav-pills-link-active-bg: #002147;
}

[data-bs-theme="dark"] .nav-pills{
    --bs-nav-pills-link-active-bg: #75B2DD;
}

.nav-pills .active {
    background-color: var(--bs-nav-pills-link-active-bg);
}

.btn {
    --bs-btn-bg: #D0A627;
    background-color: var(--bs-btn-bg);
    border-color: var(--bs-btn-bg);
    --bs-btn-hover-bg: #75B2DD;
    --bs-btn-hover-border-color: #002147;
}

.icon-square {
    width: 3.5rem;
    height: 3.5rem;
    border-radius: 0.75rem;
  }

.bg-body-secundary {
    background-color: rgba(var(--bs-secondary-bg-rgb),var(--bs-bg-opacity)) !important;
}

.bg-body-tertiary {
    background-color: rgba(var(--bs-tertiary-bg-rgb),var(--bs-bg-opacity)) !important;
  }

.gradient-background {
    background: linear-gradient(100deg, #002147, #75B2DD);
    background-size: 150% 150%;
  }

[data-bs-theme="dark"] .gradient-background {
    background: linear-gradient(100deg, #49555E, #7D9DB3);
    background-size: 150% 150%;
}

.gradient-background:hover {
    animation: gradient-animation 2s ease infinite;
}
  
@keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.dropdown-menu {
    --bs-dropdown-link-active-bg: #9ec9e7;
    --bs-dropdown-link-active-color: #22272b;
}

[data-bs-theme="dark"] .dropdown-menu {
    --bs-dropdown-link-active-bg: #75B2DD;
    --bs-dropdown-link-active-color: #dee2e6;
}

@media (max-width: 800px) {
  #hoverIcon1 {
    animation-delay: 0s;
  }
  
  #hoverIcon2 {
      animation-delay: 0.2s;
  }
  
  #hoverIcon3 {
      animation-delay: 0.4s;
  }
  
  #hoverIcon4 {
      animation-delay: 0.6s;
  }
  
  #hoverIcon5 {
      animation-delay: 0.8s;
  }
  
  #hoverIcon6 {
      animation-delay: 1s;
  }

  .gradient-background {
    animation: gradient-animation 2s ease infinite;
  } 
}

@keyframes rotate {
  100% {
    transform: rotate(360deg);
  }
}

.top-1 {
  animation: rotate 35s linear infinite;
  transform-origin: 13px 25px;
}

.top-2 {
  animation: rotate 30s linear infinite;
  transform-origin: 13px 25px;
}

.top-3 {
  animation: rotate 35s linear infinite;
  transform-origin: 13px 25px;
}

.bottom-1 {
  animation: rotate 30s linear infinite;
  transform-origin: 84px 93px;
}

.bottom-2 {
  animation: rotate 35s linear infinite;
  transform-origin: 84px 93px;
}

.bottom-3 {
  animation: rotate 35s linear infinite;
  transform-origin: 84px 93px;
}

.invalid-feedback {
  display: block;
}

.valid-feedback {
  display: block;
}

#emailMessage {
  margin-top: 5px;
  height: 25px; /* Fixed height */
  overflow: hidden; /* Prevent overflow */
}

